--- a/framework/snipets/snipetpropertydlg.ui
+++ b/framework/snipets/snipetpropertydlg.ui
@@ -196,15 +196,47 @@
           <string>Category</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_6">
-          <item row="0" column="0">
+          <item row="0" column="0" colspan="3">
            <widget class="CategoryTreeView" name="m_categoryTreeView">
             <attribute name="headerVisible">
              <bool>false</bool>
             </attribute>
-            <attribute name="headerVisible">
-             <bool>false</bool>
-            </attribute>
            </widget>
+          </item>
+          <item row="1" column="2">
+           <widget class="QPushButton" name="m_removeCategoryButton">
+            <property name="text">
+             <string>&amp;Remove Category</string>
+            </property>
+            <property name="icon">
+             <iconset resource="../../components/xinxpluginselector.qrc">
+              <normaloff>:/images/remove.png</normaloff>:/images/remove.png</iconset>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QPushButton" name="m_addCategoryButton">
+            <property name="text">
+             <string>&amp;Add Category</string>
+            </property>
+            <property name="icon">
+             <iconset resource="../../components/xinxpluginselector.qrc">
+              <normaloff>:/images/add.png</normaloff>:/images/add.png</iconset>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
           </item>
          </layout>
         </widget>
@@ -253,6 +285,11 @@
          <property name="title">
           <string>&amp;Parameter</string>
          </property>
+         <layout class="QGridLayout" name="gridLayout_7">
+          <item row="0" column="0">
+           <widget class="QTableView" name="m_parameterTable"/>
+          </item>
+         </layout>
         </widget>
        </item>
       </layout>
@@ -304,7 +341,9 @@
   <tabstop>m_descriptionTextEdit</tabstop>
   <tabstop>m_textEdit</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="../../components/xinxpluginselector.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
