--- a/xinx/ui/custom.ui
+++ b/xinx/ui/custom.ui
@@ -155,6 +155,13 @@
      </property>
     </widget>
    </item>
+   <item row="3" column="1">
+    <widget class="QDialogButtonBox" name="m_buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok|QDialogButtonBox::RestoreDefaults</set>
+     </property>
+    </widget>
+   </item>
    <item row="2" column="1">
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="currentIndex">
@@ -1497,8 +1504,8 @@
       </layout>
      </widget>
      <widget class="QWidget" name="m_snipet">
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0" colspan="7">
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
         <widget class="QLabel" name="label_13">
          <property name="text">
           <string>List of snipet that could be used as a completion (with the snipet key) or called manually in the menu. You can also import snipet in &lt;b&gt;XINX&lt;/b&gt; file or export snipet to a &lt;i&gt;XML&lt;/i&gt; file.</string>
@@ -1508,7 +1515,35 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="0" colspan="7">
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QLabel" name="label_3">
+           <property name="text">
+            <string>&amp;Filter :</string>
+           </property>
+           <property name="buddy">
+            <cstring>m_snipetFilterLineEdit</cstring>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QToolButton" name="toolButton">
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../application.qrc">
+             <normaloff>:/images/edit-clear-locationbar-ltr.png</normaloff>:/images/edit-clear-locationbar-ltr.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="m_snipetFilterLineEdit"/>
+         </item>
+        </layout>
+       </item>
+       <item>
         <widget class="QTreeView" name="m_snipetTreeView">
          <property name="whatsThis">
           <string>List of snipet (or template) that &lt;b&gt;XINX&lt;/b&gt; can use. A snipet is a piece of code quickly accessible by a key word, or by a menu.</string>
@@ -1527,102 +1562,106 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
-        <widget class="QPushButton" name="m_addPushButton">
-         <property name="whatsThis">
-          <string>Open a dialog to create a new snipet.</string>
-         </property>
-         <property name="text">
-          <string>&amp;Add</string>
-         </property>
-         <property name="icon">
-          <iconset resource="../../components/xinxpluginselector.qrc">
-           <normaloff>:/images/add.png</normaloff>:/images/add.png</iconset>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QPushButton" name="m_removePushButton">
-         <property name="whatsThis">
-          <string>Delete selected snipet in the list below.</string>
-         </property>
-         <property name="text">
-          <string>&amp;Delete</string>
-         </property>
-         <property name="icon">
-          <iconset resource="../../components/xinxpluginselector.qrc">
-           <normaloff>:/images/remove.png</normaloff>:/images/remove.png</iconset>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="2">
-        <widget class="QPushButton" name="m_modifyPushButton">
-         <property name="whatsThis">
-          <string>Modify the selected snipet.</string>
-         </property>
-         <property name="text">
-          <string>&amp;Modify</string>
-         </property>
-         <property name="icon">
-          <iconset resource="../application.qrc">
-           <normaloff>:/images/document-properties.png</normaloff>:/images/document-properties.png</iconset>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="4">
-        <spacer>
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="2" column="5">
-        <widget class="QPushButton" name="m_importPushButton">
-         <property name="whatsThis">
-          <string>Import a list of snipet from an XML file.</string>
-         </property>
-         <property name="text">
-          <string>&amp;Import ...</string>
-         </property>
-         <property name="icon">
-          <iconset resource="../application.qrc">
-           <normaloff>:/images/document-import.png</normaloff>:/images/document-import.png</iconset>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="6">
-        <widget class="QPushButton" name="m_exportPushButton">
-         <property name="whatsThis">
-          <string>Export selected snipet to an XML file.</string>
-         </property>
-         <property name="text">
-          <string>&amp;Export ...</string>
-         </property>
-         <property name="icon">
-          <iconset resource="../application.qrc">
-           <normaloff>:/images/document-export.png</normaloff>:/images/document-export.png</iconset>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="3">
-        <widget class="QPushButton" name="m_duplicatePushButton">
-         <property name="whatsThis">
-          <string>Duplicate the selected snipet</string>
-         </property>
-         <property name="text">
-          <string>D&amp;uplicate</string>
-         </property>
-         <property name="icon">
-          <iconset resource="../application.qrc">
-           <normaloff>:/images/editcopy.png</normaloff>:/images/editcopy.png</iconset>
-         </property>
-        </widget>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QPushButton" name="m_addPushButton">
+           <property name="whatsThis">
+            <string>Open a dialog to create a new snipet.</string>
+           </property>
+           <property name="text">
+            <string>&amp;Add</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../../components/xinxpluginselector.qrc">
+             <normaloff>:/images/add.png</normaloff>:/images/add.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="m_removePushButton">
+           <property name="whatsThis">
+            <string>Delete selected snipet in the list below.</string>
+           </property>
+           <property name="text">
+            <string>&amp;Delete</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../../components/xinxpluginselector.qrc">
+             <normaloff>:/images/remove.png</normaloff>:/images/remove.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="m_modifyPushButton">
+           <property name="whatsThis">
+            <string>Modify the selected snipet.</string>
+           </property>
+           <property name="text">
+            <string>&amp;Modify</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../application.qrc">
+             <normaloff>:/images/document-properties.png</normaloff>:/images/document-properties.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="m_duplicatePushButton">
+           <property name="whatsThis">
+            <string>Duplicate the selected snipet</string>
+           </property>
+           <property name="text">
+            <string>D&amp;uplicate</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../application.qrc">
+             <normaloff>:/images/editcopy.png</normaloff>:/images/editcopy.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer>
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="m_importPushButton">
+           <property name="whatsThis">
+            <string>Import a list of snipet from an XML file.</string>
+           </property>
+           <property name="text">
+            <string>&amp;Import ...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../application.qrc">
+             <normaloff>:/images/document-import.png</normaloff>:/images/document-import.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="m_exportPushButton">
+           <property name="whatsThis">
+            <string>Export selected snipet to an XML file.</string>
+           </property>
+           <property name="text">
+            <string>&amp;Export ...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../application.qrc">
+             <normaloff>:/images/document-export.png</normaloff>:/images/document-export.png</iconset>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </widget>
@@ -1678,13 +1717,6 @@
        </item>
       </layout>
      </widget>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QDialogButtonBox" name="m_buttonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok|QDialogButtonBox::RestoreDefaults</set>
-     </property>
     </widget>
    </item>
   </layout>
@@ -1825,6 +1857,22 @@
     <hint type="destinationlabel">
      <x>667</x>
      <y>402</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>toolButton</sender>
+   <signal>clicked()</signal>
+   <receiver>m_snipetFilterLineEdit</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>204</x>
+     <y>91</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>243</x>
+     <y>92</y>
     </hint>
    </hints>
   </connection>
